Complete Java 11 to 21 upgrade with launcher scripts
- Upgraded Java version from 11 to 21 in pom.xml
- Updated Maven compiler plugin to 3.14.1 with release flag
- Modernized Java code with Java 21 features:
  * String.format() -> String.formatted()
  * list.get(0) -> list.getFirst()
  * Text blocks for multi-line strings
- Fixed test compilation issues
- Added automated launcher scripts:
  * run.bat - One-click launcher
  * setup-and-run.ps1 - Auto-compile and run
  * launch.ps1 - Simple launch script
  * LAUNCH.md - Documentation
- All tests passing
- Build successful with zero errors
- GUI launches successfully on Java 21